--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
   <script src="assets/js/fancy.js"></script>
+  <script src="assets/js/data.js"></script>
   <script src="assets/js/swap.js"></script>
 </body>
 
