--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </div>
         </div>
         <div class="btns-swap">
-          <a href="#" id="swap-button" class="cta-button swap-button">Swap</a>
+          <a href="#" id="swap-button" class="cta-button swap-button">Connect Wallet</a>
         </div>
       </div>
     </section>
