--- a/index.html
+++ b/index.html
@@ -236,63 +236,13 @@
                   <span>0.0000 TAU / 0.0000 LUSD</span>
                 </div>
                 <div class="data btns-pool">
-                  <a href="#" class="cta-button m-0 add-liquidity">Add Liquidity</a>
+                  <a href="#" class="cta-button m-0 add-liquidity" data-tokens="currency;con_luxuro">Add Liquidity</a>
                   <a href="#" class="cta-button m-0 remove-liquidity">Remove Liquidity</a>
                   <a href="#" class="cta-button me-0 claim-rewards">Claim Rewards</a>
                 </div>
               </td>
             </tr>
-            <tr class="pool-row">
-              <td class="pool-info">ETHLUSD</td>
-              <td class="pool-info">0.20%</td>
-              <td class="pool-info">$19.98m</td>
-              <td class="pool-info">$652.11m</td>
-              <td class="pool-info">
-                <div class="icon-right-arrow">
-                  <img src="assets/img/right-arrow.svg" class="arrow" alt="Right Arrow" />
-                </div>
-              </td>
-            </tr>
-            <tr class="pool-details">
-              <td colspan="5">
-                <div class="data">
-                  <span>Pool ID:</span>
-                  <span>ETHLUSD</span>
-                </div>
-                <div class="data">
-                  <span>Daily USD Volume:</span>
-                  <span>$19.98m</span>
-                </div>
-                <div class="data">
-                  <span>Liquidity utilization:</span>
-                  <span>12,420.02%</span>
-                </div>
-                <div class="data">
-                  <span>Fees</span>
-                  <span>0.60%</span>
-                </div>
-                <div class="data mt-30px">
-                  <span class="bold">Your Position</span>
-                </div>
-                <div class="data">
-                  <span>Liquidity Points:</span>
-                  <span>0 LP (0.0000 TAU/0.0000 ETH)</span>
-                </div>
-                <div class="data">
-                  <span>Share:</span>
-                  <span>0%</span>
-                </div>
-                <div class="data">
-                  <span>Rewards:</span>
-                  <span>0.0000 TAU / 0.0000 ETH</span>
-                </div>
-                <div class="data btns-pool">
-                  <a href="#" class="cta-button m-0 add-liquidity">Add Liquidity</a>
-                  <a href="#" class="cta-button m-0 remove-liquidity">Remove Liquidity</a>
-                  <a href="#" class="cta-button me-0 claim-rewards">Claim Rewards</a>
-                </div>
-              </td>
-            </tr>
+            
           </tbody>
         </table>
       </div>
