--- a/index.html
+++ b/index.html
@@ -426,6 +426,7 @@
   <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
   <script src="assets/js/fancy.js"></script>
   <script src="assets/js/data.js"></script>
+  <script src="assets/js/lamden_tx.js"></script>
   <script src="assets/js/swap.js"></script>
 </body>
 
