--- a/index.html
+++ b/index.html
@@ -399,12 +399,12 @@
             <p class="mb-0">Balance: <span id="create-pool-balance-1">0.00000000</span></p>
           <div class="input-group-form">
             <input type="text" placeholder="0.00" id="create-pool-input-1" class="slippage-input numeric-input full-width-input">
-            <img src="assets/img/lamden.svg" alt="Token 1" class="input-image" id="create-pool-token-1" data-contract="currency">
+            <img src="assets/img/lamden.svg" alt="TAU" class="input-image" id="create-pool-token-1" data-contract="currency">
           </div>
           <p class="mb-0">Balance: <span id="create-pool-balance-2">0.00000000</span></p>
           <div class="input-group-form mb-0">
             <input type="text" placeholder="0.00" id="create-pool-input-2" class="slippage-input numeric-input full-width-input">
-            <img src="assets/img/logo.svg" alt="Token 2" class="input-image" id="create-pool-token-2" data-contract="con_luxuro">
+            <img src="assets/img/logo.svg" alt="Luxuro" class="input-image" id="create-pool-token-2" data-contract="con_luxuro">
           </div>
           <p class="mb-0">Fee % (0.1% - 10%) - Deducted from each trade</p>
           <div class="input-group-form mb-0">
