--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         </div>
         <div class="modal__content" id="create-pool-modal-content">
           <p>Creating a pool will make a new market. You will be the first liquidity provider. You can create a pool
-            for any two tokens.</p>
+            for any two tokens. The fee earned by the pool will be sent to the liquidity providers.</p>
             <p class="mb-0">Balance: <span id="create-pool-balance-1">0.00000000</span></p>
           <div class="input-group-form">
             <input type="text" placeholder="0.00" id="create-pool-input-1" class="slippage-input numeric-input full-width-input">
