--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
         </div>
         <div class="modal__footer">
-          <button class="modal__btn modal__btn-primary" id="remove-liquidity">Remove Liquidity</button>
+          <button class="modal__btn modal__btn-primary" id="remove-liquidity-btn">Remove Liquidity</button>
           <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">
             Close
           </button>
