--- a/index.html
+++ b/index.html
@@ -335,12 +335,12 @@
             <p class="mb-0">Balance: <span id="add-liquidity-balance-1">0.00000000</span></p>
           <div class="input-group-form">
             <input type="text" placeholder="0.00" id="add-liquidity-input-1" class="slippage-input numeric-input full-width-input">
-            <img src="assets/img/lamden.svg" alt="Token 1" class="input-image">
+            <img src="assets/img/lamden.svg" alt="Token 1" class="input-image" id="add-liquidity-token-1" data-contract="currency">
           </div>
           <p class="mb-0">Balance: <span id="add-liquidity-balance-2">0.00000000</span></p>
           <div class="input-group-form mb-0">
             <input type="text" placeholder="0.00" id="add-liquidity-input-2" class="slippage-input numeric-input full-width-input">
-            <img src="assets/img/logo.svg" alt="Token 2" class="input-image">
+            <img src="assets/img/logo.svg" alt="Token 2" class="input-image" id="add-liquidity-token-2" data-contract="con_luxuro">
           </div>
         </div>
         <div class="modal__footer">
