--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
   </header>
 
   <main style="display: flex">
+    <section class="content" id="loader">
+      <div class="loader"><div class="inner one"></div>
+      <div class="inner two"></div>
+      <div class="inner three"></div></div>
+    </section>
     <section class="content" id="home">
       <div id="webgl-container">
         <img src="assets/img/logo.svg" alt="Luxuro Logo" id="logo" />
