--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 
   <main style="display: flex">
     <section class="content" id="loader">
-      <div class="loader"><div class="inner one"></div>
-      <div class="inner two"></div>
-      <div class="inner three"></div></div>
+      <div class="loader">Loading...</div>
     </section>
     <section class="content" id="home">
       <div id="webgl-container">
