--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
             <div class="data">
               <span>Trade routed through:</span>
-              <span>TAULUSD</span>
+              <span id="pool-id">0</span>
             </div>
             <div class="data">
               <span>Slippage tolerance:</span>
@@ -190,63 +190,8 @@
               <th></th>
             </tr>
           </thead>
-          <tbody>
-            <tr class="pool-row">
-              <td class="pool-info">1</td>
-              <td class="pool-info">TAU / Luxuro</td>
-              <td class="pool-info">0.20%</td>
-              <td class="pool-info">$24.98m</td>
-              <td class="pool-info">$321.55m</td>
-              <td class="pool-info">
-                <div class="icon-right-arrow">
-                  <img src="assets/img/right-arrow.svg" class="arrow" alt="Right Arrow" />
-                </div>
-              </td>
-            </tr>
-            <tr class="pool-details">
-              <td colspan="6">
-                <div class="data">
-                  <span>Pool ID:</span>
-                  <span>1</span>
-                </div>
-                <div class="data">
-                  <span>Tokens:</span>
-                  <span>TAU / Luxuro</span>
-                </div>
-                <div class="data">
-                  <span>Daily USD Volume:</span>
-                  <span>$24.98m</span>
-                </div>
-                <div class="data">
-                  <span>Liquidity utilization:</span>
-                  <span>27,820.02%</span>
-                </div>
-                <div class="data">
-                  <span>Fees:</span>
-                  <span>0.60%</span>
-                </div>
-                <div class="data mt-30px">
-                  <span class="bold">Your Position</span>
-                </div>
-                <div class="data">
-                  <span>Liquidity Points:</span>
-                  <span>0 LP (0.0000 TAU/0.0000 USD)</span>
-                </div>
-                <div class="data">
-                  <span>Share:</span>
-                  <span>0%</span>
-                </div>
-                <div class="data">
-                  <span>Rewards:</span>
-                  <span>0.0000 TAU / 0.0000 LUSD</span>
-                </div>
-                <div class="data btns-pool">
-                  <a href="#" class="cta-button m-0 add-liquidity" data-tokens="currency;con_luxuro">Add Liquidity</a>
-                  <a href="#" class="cta-button m-0 remove-liquidity">Remove Liquidity</a>
-                  <a href="#" class="cta-button me-0 claim-rewards">Claim Rewards</a>
-                </div>
-              </td>
-            </tr>
+          <tbody id="pool-table-body">
+            
             
           </tbody>
         </table>
